// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildGifHolder() Renders correctly 1`] = `
<div
  class="gif-holder"
>
  <img
    src="https://path/to/image.gif"
    title="img_title"
  />
  <div
    class="gif-overlay"
  >
    <div
      class="gif-tools"
    >
      <div
        class="btn-group btn-group-sm"
        role="group"
      >
        <button
          class="btn btn-outline-light"
          title="Delete this gif"
          type="button"
        >
          Delete
        </button>
        <button
          class="btn btn-outline-light"
          title="Copy link to clipboard"
          type="button"
        >
          <span
            class="btn-gif-action-text"
          />
          <i
            class="fas fa-check btn-gif-action-icon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`getCopyLinkGifButton() Renders corectly 1`] = `
<button
  class="btn btn-outline-light"
  title="Copy link to clipboard"
  type="button"
>
  <span
    class="btn-gif-action-text"
  />
  <i
    class="fas fa-check btn-gif-action-icon"
  />
</button>
`;

exports[`getDeleteGifButton() Renders corectly 1`] = `
<button
  class="btn btn-outline-light"
  title="Delete this gif"
  type="button"
>
  Delete
</button>
`;

exports[`getImageElem() Renders corectly 1`] = `
<img
  src="https://path/to/img.gif"
  title="img_title"
/>
`;

exports[`getNoResultsFeedback() Renders correctly 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"far fa-frown\\"></i>
            <p>We didn't find any results</p>  
          </div>"
`;

exports[`getPromptSearch() Renders correctly 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"fas fa-search\\"></i>
            <p>Type something to search!</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if count is null 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"far fa-frown\\"></i>
            <p>We didn't find any results</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if count is undefined 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"far fa-frown\\"></i>
            <p>We didn't find any results</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if paginationData is null 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"fas fa-search\\"></i>
            <p>Type something to search!</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if paginationData is undefined 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"fas fa-search\\"></i>
            <p>Type something to search!</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if total_count is null 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"far fa-frown\\"></i>
            <p>We didn't find any results</p>  
          </div>"
`;

exports[`getResultsReport() Renders correct icon if total_count is undefined 1`] = `
"<div class=\\"resuts-icon-holder\\">
            <i class=\\"far fa-frown\\"></i>
            <p>We didn't find any results</p>  
          </div>"
`;
